muting the video + adding the screenrecording

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <br><a href="#work">Naše Práce</a>
                 </aside>
             </article>
-            <video autoplay>
+            <video autoplay muted>
                 <source src="./images/videoplayback.mp4" type="video/mp4">
             </video>
         </section>
