--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </p>
             </aside>
             <aside>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2647.7697971013886!2d18.638747176331776!3d48.42256367127642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476ad43303d79471%3A0xc4049d9332c41aa1!2zQmVybm9sw6Frb3ZhIDI0LzEwLCA5NjggMDEgTm92w6EgQmHFiGE!5e0!3m2!1ssk!2ssk!4v1729938036299!5m2!1ssk!2ssk" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2647.7697971013886!2d18.638747176331776!3d48.42256367127642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476ad43303d79471%3A0xc4049d9332c41aa1!2zQmVybm9sw6Frb3ZhIDI0LzEwLCA5NjggMDEgTm92w6EgQmHFiGE!5e0!3m2!1ssk!2ssk!4v1729938036299!5m2!1ssk!2ssk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </aside>
         </section>
         <section id="copy">
