--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
                 <li><a href="#work">Naše Práce</a></li>
                 <li class="btn"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
             </ul>
+            <div class="burger">
+                <div class="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox">
+                    <label class="menu__btn" for="menu__toggle">
+                        <span></span>
+                    </label>
+                    <ul class="menu__box">
+                        <li><a href="#about_us">O nás</a></li>
+                        <li><a href="#services">Služby</a></li>
+                        <li><a href="#work">Naše Práce</a></li>
+                        <li class="btn"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
