adding logo, optimizing css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemar s.r.o.</title>
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="icon" href="./images/logo_vektor.png">
     <meta name="description" content="Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť podieľala na mnohých projektoch pre renovované firmy, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu."> <!-- todoadd a long describtion 150-220 characters-->
 </head>
 <body>
     <header>
         <nav class="nav_bar">
             <aside>
+                <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo"></a>
                 <a href="index.html"><h1>Hemar s.r.o.</h1></a>
             </aside>
             <ul class="nav_list">
@@ -37,16 +39,15 @@
     </header>
     <main>
         <section id="landing_page">
-            <article>
-                <aside class="land_content">
-                    <h1>Hemar s.r.o</h1>
-                    <strong>Už viac, ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých, bezpečných pracovníkov.</strong>
-                    <br><a href="#work">Naše Práce</a>
-                </aside>
-            </article>
-            <video autoplay muted>
-                <source src="./images/videoplayback.mp4" type="video/mp4">
-            </video>
+            <section>
+                <article>
+                    <aside class="land_content">
+                        <h1>Vitajte na stránke Hemar s.r.o</h1>
+                        <strong>Už viac, ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých, bezpečných pracovníkov.</strong>
+                        <br><a href="#work">Naše Práce</a>
+                    </aside>
+                </article>
+            </section>
         </section>
         <section id="about_us">
             <article>
@@ -54,7 +55,9 @@
                     <h2>O Nás</h2>
                     <p>Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť PODIEĽALA NA MNOHÝCH PROJEKTOCH PRE RENOMOVANÉ firmy rôzneho zamerania, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu. No napriek tomu stále nekončíme a sme otvorení novým výzvam, bez rozdielu na obtiažnosti projektu. Firma má k dispozícii skúsený tím elektrikárov so štátnymi elektrikárskymi skúškami, kvalifikovaných zámočníkov so znalosťami schém, izometrií a plánov.</p>
                 </aside>
-                <figure></figure>
+                <video controls>
+                    <source src="./images/videoplayback.mp4" type="video/mp4">
+                </video>
             </article>
         </section>
         <section id="services">
@@ -197,6 +200,10 @@
                     <strong>Telefónne číslo:</strong><br>
                     <a href="tel:+421911021777">+421 911 021 777</a> <br>
                     <a href="tel:+421903507587">+421 903 507 587</a>
+                </p>
+                <p>
+                    <strong>Facebook:</strong> <br>
+                    <a href="https://www.facebook.com/profile.php?id=100090549955033">Hemar s.r.o.</a>
                 </p>
             </aside>
             <aside>
