--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemar s.r.o.</title>
-    <link rel="stylesheet" href="./CSS/">
+    <link rel="stylesheet" href="./CSS/index.css">
     <link rel="icon" href="./images/logo_vektor.png">
     <meta name="description" content="Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť podieľala na mnohých projektoch pre renovované firmy, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu."> <!-- todoadd a long describtion 150-220 characters-->
 </head>
