finishing the website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemar s.r.o.</title>
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/home.css">
     <link rel="icon" href="./images/logo_vektor.png">
     <meta name="description" content="Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť podieľala na mnohých projektoch pre renovované firmy, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu."> <!-- todoadd a long describtion 150-220 characters-->
 </head>
@@ -43,7 +43,7 @@
                 <article>
                     <aside class="land_content">
                         <h1>Vitajte na stránke Hemar s.r.o</h1>
-                        <strong>Už viac, ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých, bezpečných pracovníkov.</strong>
+                        <strong>Už viac ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých a skúsených pracovníkov.</strong>
                         <br><a href="#work">Naše Práce</a>
                     </aside>
                 </article>
@@ -53,7 +53,9 @@
             <article>
                 <aside>
                     <h2>O Nás</h2>
-                    <p>Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť PODIEĽALA NA MNOHÝCH PROJEKTOCH PRE RENOMOVANÉ firmy rôzneho zamerania, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu. No napriek tomu stále nekončíme a sme otvorení novým výzvam, bez rozdielu na obtiažnosti projektu. Firma má k dispozícii skúsený tím elektrikárov so štátnymi elektrikárskymi skúškami, kvalifikovaných zámočníkov so znalosťami schém, izometrií a plánov.</p>
+                    <p>Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa ako elektrikárska a strojárska spoločnosť podieľala na mnohých projektoch pre renomované firmy rôzneho zamerania, hlavne v oblasti elektrikárskych prác, taktiež naša firma pôsobí v strojárstve, kde vykonávame montážne a demontážne práce, servisné práce, montáž potrubných systémov, zváranie MIG/MAG/MMA, výmeny membránových tesnení alebo celú kompletizáciu.
+                        No napriek tomu stále nekončíme a sme otvorení novým výzvam bez  rozdielu na obtiažnosti projektu, vždy sme pripravení pridať hodnotu a úspešne zvládnuť akúkoľvek úlohu, ktorá nám príde do cesty.
+                        Naša spoločnosť má k dispozícii skúsený tím elektrikárov so štátnymi skúškami, kvalifikovaných zámočníkov a zváračov so znalosťami v čítaní technickej dokumentácie.</p>
                 </aside>
                 <video controls>
                     <source src="./images/videoplayback.mp4" type="video/mp4">
@@ -199,11 +201,19 @@
                 <p>
                     <strong>Telefónne číslo:</strong><br>
                     <a href="tel:+421911021777">+421 911 021 777</a> <br>
-                    <a href="tel:+421903507587">+421 903 507 587</a>
+                    <a href="tel:+421905325648">+421905325648</a>
                 </p>
+            </aside>
+            <aside>
                 <p>
                     <strong>Facebook:</strong> <br>
                     <a href="https://www.facebook.com/profile.php?id=100090549955033">Hemar s.r.o.</a>
+                </p>
+                <p>
+                    <strong>Fakturačné údaje:</strong>
+                    <p>IČO: 47 019 620</p>
+                    <p>DIČ: 2023709567</p>
+                    <p>IČ DPH: SK 2023709567</p>
                 </p>
             </aside>
             <aside>
