--- a/index.html
+++ b/index.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hemar s.r.o.</title>
-    <link rel="stylesheet" href="./CSS/home.css">
+    <title>Hemar s.r.o. - Servisné činnsoti, Strojárska technológia</title>
+    <link rel="stylesheet" href="./CSS/index.css">
     <link rel="icon" href="./images/logo_vektor.png">
-    <meta name="description" content="Vďaka naším dlhoročným skúsenostiam na Európskom trhu sme sa, ako Elektrikárska spoločnosť podieľala na mnohých projektoch pre renovované firmy, hlavne v oblasti elektrikárskych prác. Taktiež naša firma pôsobí v strojárskej technológii -montážne činnosť,servisné činnosti ,výmeny mebranových tesnení, montáž potrubných systémov, zváranie alebo celú kompletáciu."> <!-- todoadd a long describtion 150-220 characters-->
+    <link rel="canonical" href="http://hemar-slovakia.sk">
+    <meta name="keywords" content="Hemar, Hemar sro, servisné činnosti, nová baňa, montážne činnosti, výmeny mebranových tesnení">
+    <meta name="google-site-verification" content="IAtmC6FETm_rJBXfTd74viYqFw3w2K_xSpGDR_-tKVk" />
+    <meta name="description" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta property="og:title" content="HEMAR s.r.o.">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Naša firma pôsobí v strojárskej technológii -montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta property="og:image" content="http://hemar-slovakia.sk/Hemar_web/images/logo_vektor.png">
+    <meta property="og:url" content="http://hemar-slovakia.sk">
+    <meta name="twitter:title" content="HEMAR s.r.o.">
+    <meta name="twitter:description" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť, servisné činnosti, výmeny mebranových tesnení.">
+    <meta name="twitter:url" content="http://hemar-slovakia.sk">
+    <meta name="twitter:image" content="http://hemar-slovakia.sk/Hemar_web/images/logo_vektor.png">
+    <meta name="twitter:card" content="Naša firma pôsobí v strojárskej technológii - montážne činnosť,servisné činnosti, výmeny mebranových tesnení.">
 </head>
 <body>
     <header>
         <nav class="nav_bar">
             <aside>
-                <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo"></a>
+                <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo" title="logo"></a>
                 <a href="index.html"><h1>Hemar s.r.o.</h1></a>
             </aside>
             <ul class="nav_list">
-                <li><a href="#about_us">O nás</a></li>
-                <li><a href="#services">Služby</a></li>
-                <li><a href="#work">Naše Práce</a></li>
-                <li class="btn"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
+                <li><a href="#about_us" title="O nás">O nás</a></li>
+                <li><a href="#services" title="Služby">Služby</a></li>
+                <li><a href="#work" title="Naše Práce">Naše Práce</a></li>
+                <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
             </ul>
             <div class="burger">
                 <div class="hamburger-menu">
@@ -28,10 +41,10 @@
                         <span></span>
                     </label>
                     <ul class="menu__box">
-                        <li><a href="#about_us">O nás</a></li>
-                        <li><a href="#services">Služby</a></li>
-                        <li><a href="#work">Naše Práce</a></li>
-                        <li class="btn"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
+                        <li><a href="#about_us" title="O nás">O nás</a></li>
+                        <li><a href="#services" title="Služby">Služby</a></li>
+                        <li><a href="#work" title="Naše Práce">Naše Práce</a></li>
+                        <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,9 +55,9 @@
             <section>
                 <article>
                     <aside class="land_content">
-                        <h1>Vitajte na stránke Hemar s.r.o</h1>
+                        <h2>Vitajte na stránke Hemar s.r.o</h2>
                         <strong>Už viac ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých a skúsených pracovníkov.</strong>
-                        <br><a href="#work">Naše Práce</a>
+                        <br><a href="#work" title="Naše Práce">Naše Práce</a>
                     </aside>
                 </article>
             </section>
@@ -58,7 +71,7 @@
                         Naša spoločnosť má k dispozícii skúsený tím elektrikárov so štátnymi skúškami, kvalifikovaných zámočníkov a zváračov so znalosťami v čítaní technickej dokumentácie.</p>
                 </aside>
                 <video controls>
-                    <source src="./images/videoplayback.mp4" type="video/mp4">
+                    <source src="./images/videoplayback.mp4" type="video/mp4" title="úvodné videjko">
                 </video>
             </article>
         </section>
@@ -89,10 +102,10 @@
                     <figure>
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/newri_irsko/image_1236502913.JPG" alt="Ihrisko">
-                                <img src="./images/newri_irsko/image_1236502912.JPG" alt="Ihrisko">
-                                <img src="./images/newri_irsko/image_123650291.JPG" alt="Ihrisko">
-                                <img src="./images/newri_irsko/image_12365029124.JPG" alt="Ihrisko">
+                                <img src="./images/newri_irsko/image_1236502913.JPG" alt="Ihrisko" title="Írsko">
+                                <img src="./images/newri_irsko/image_1236502912.JPG" alt="Ihrisko" title="Írsko">
+                                <img src="./images/newri_irsko/image_123650291.JPG" alt="Ihrisko" title="Írskoo">
+                                <img src="./images/newri_irsko/image_12365029124.JPG" alt="Ihrisko" title="Írsko">
                             </div>
                         </div>
                         <figcaption>Project - Írsko</figcaption>
@@ -104,14 +117,14 @@
                     <figure>                 
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/morgan_sint_rode/image_1236502911.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_123650291.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502913.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502914.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502915.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502916.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502917.JPG" alt="Montáž">
-                                <img src="./images/morgan_sint_rode/image_1236502918.JPG" alt="Montáž">                            
+                                <img src="./images/morgan_sint_rode/image_1236502911.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_123650291.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502913.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502914.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502915.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502916.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502917.JPG" alt="Montáž" title="Morgan Sint Rode">
+                                <img src="./images/morgan_sint_rode/image_1236502918.JPG" alt="Montáž" title="Morgan Sint Rode">                            
                             </div>
                         </div>
                         <figcaption>Projekt - Morgan Sint Rode</figcaption>
@@ -123,8 +136,8 @@
                     <figure>
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/holgstraten_solar_panels/image_6209779.JPG" alt="solar panely">
-                                <img src="./images/holgstraten_solar_panels/image_123650291.JPG" alt="solar panely">
+                                <img src="./images/holgstraten_solar_panels/image_6209779.JPG" alt="solar panely" title="Holgstraten solar panels">
+                                <img src="./images/holgstraten_solar_panels/image_123650291.JPG" alt="solar panely" title="Holgstraten solar panels">
                             </div>
                         </div>
                         <figcaption>Projekt - Holgstraten solar panels</figcaption>
@@ -136,11 +149,11 @@
                     <figure>
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/stredna_skola_mechelen/image_1236502911.JPG" alt="skola">
-                                <img src="./images/stredna_skola_mechelen/image_1236502912.JPG" alt="skola">
-                                <img src="./images/stredna_skola_mechelen/image_1236502913.JPG" alt="skola">
-                                <img src="./images/stredna_skola_mechelen/image_1236502914.JPG" alt="skola">
-                                <img src="./images/stredna_skola_mechelen/image_123650291.JPG" alt="skola">       
+                                <img src="./images/stredna_skola_mechelen/image_1236502911.JPG" alt="skola" title="Stredná Škola Mechelen">
+                                <img src="./images/stredna_skola_mechelen/image_1236502912.JPG" alt="skola" title="Stredná Škola Mechelen">
+                                <img src="./images/stredna_skola_mechelen/image_1236502913.JPG" alt="skola" title="Stredná Škola Mechelen">
+                                <img src="./images/stredna_skola_mechelen/image_1236502914.JPG" alt="skola" title="Stredná Škola Mechelen">
+                                <img src="./images/stredna_skola_mechelen/image_123650291.JPG" alt="skola" title="Stredná Škola Mechelen">       
                             </div>
                         </div>     
                         <figcaption>Projekt - Stredná Škola Mechelen</figcaption>
@@ -152,14 +165,14 @@
                     <figure>
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/psych_liecebna_teinen/1.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/2.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/3.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/4.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/5.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/6.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/7.JPG" alt="Psychiatrická liečebňa">
-                                <img src="./images/psych_liecebna_teinen/8.JPG" alt="Psychiatrická liečebňa">                            
+                                <img src="./images/psych_liecebna_teinen/1.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/2.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/3.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/4.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/5.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/6.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/7.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">
+                                <img src="./images/psych_liecebna_teinen/8.JPG" alt="Psychiatrická liečebňa" title="Psychiatrická liečebňa Tienen">                            
                             </div>
                         </div>
                         <figcaption>Projekt - Psychiatrická liečebňa Tienen</figcaption>
@@ -171,15 +184,15 @@
                     <figure>
                         <div class="carousel">
                             <div class="carousel-content">
-                                <img src="./images/sportovy_klub_brusel/S.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S1.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S2.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S3.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S4.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S5.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S6.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S7.JPG" alt="Brusel">
-                                <img src="./images/sportovy_klub_brusel/S8.JPG" alt="Brusel">            
+                                <img src="./images/sportovy_klub_brusel/S.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S1.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S2.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S3.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S4.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S5.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S6.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S7.JPG" alt="Brusel" title="Šport pub Brusel">
+                                <img src="./images/sportovy_klub_brusel/S8.JPG" alt="Brusel" title="Šport pub Brusel">            
                             </div>
                         </div>
                         <figcaption>Projekt - Šport pub Brusel</figcaption>
