Finishing the english subsite

--- a/index_en.html
+++ b/index_en.html
@@ -28,6 +28,18 @@
                 <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo" title="logo"></a>
                 <a href="index.html"><h1>Hemar s.r.o.</h1></a>
             </aside>
+            <aside class="icons">
+                <figure>
+                    <a href="index.html">
+                        <img src="./images/slovak.png" alt="slovak translation">
+                    </a>
+                </figure>
+                <figure>
+                    <a href="index_en.html">
+                        <img src="./images/en.png" alt="english translation">
+                    </a>
+                </figure>
+            </aside>
             <ul class="nav_list">
                 <li><a href="#about_us" title="O nás">About us</a></li>
                 <li><a href="#services" title="Služby">Services</a></li>
@@ -45,6 +57,18 @@
                         <li><a href="#services" title="Služby">Services</a></li>
                         <li><a href="#work" title="Naše Práce">Our work</a></li>
                         <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Contact</a></li>
+                        <li class="translate">
+                            <figure>
+                                <a href="index.html">
+                                    <img src="./images/slovak.png" alt="slovak translation">
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="index_en.html">
+                                    <img src="./images/en.png" alt="english translation">
+                                </a>
+                            </figure>
+                        </li>
                     </ul>
                 </div>
             </div>
