adding sliders and fixing issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="nav_bar">
             <aside>
                 <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo" title="logo"></a>
-                <a href="index.html"><h1>Hemar s.r.o.</h1></a>
+                <a href="index.html"><h1>HEMAR s.r.o.</h1></a>
             </aside>
             <aside class="icons">
                 <figure>
@@ -79,7 +79,7 @@
             <section>
                 <article>
                     <aside class="land_content">
-                        <h2>Vitajte na stránke Hemar s.r.o</h2>
+                        <h2>Vitajte na stránke HEMAR s.r.o</h2>
                         <strong>Už viac ako 10 rokov veríme, že každý projekt si zaslúži <br> spoľahlivých a skúsených pracovníkov.</strong>
                         <br><a href="#work" title="Naše Práce">Naše Práce</a>
                     </aside>
@@ -238,7 +238,7 @@
                 <p>
                     <strong>Telefónne číslo:</strong><br>
                     <a href="tel:+421911021777">+421 911 021 777</a> <br>
-                    <a href="tel:+421905325648">+421905325648</a>
+                    <a href="tel:+421905325648">+421 905 325 648</a>
                 </p>
             </aside>
             <aside class="map">
