--- a/index_en.html
+++ b/index_en.html
@@ -26,7 +26,7 @@
         <nav class="nav_bar">
             <aside>
                 <a class="logo" href="index.html"><img src="./images/logo_vektor.png" alt="logo" title="logo"></a>
-                <a href="index.html"><h1>Hemar s.r.o.</h1></a>
+                <a href="index.html"><h1>HEMAR s.r.o.</h1></a>
             </aside>
             <aside class="icons">
                 <figure>
@@ -43,7 +43,7 @@
             <ul class="nav_list">
                 <li><a href="#about_us" title="O nás">About us</a></li>
                 <li><a href="#services" title="Služby">Services</a></li>
-                <li><a href="#work" title="Naše Práce">Our work</a></li>
+                <li><a href="#work" title="Naše Práce">References</a></li>
                 <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">contact</a></li>
             </ul>
             <div class="burger">
@@ -55,7 +55,7 @@
                     <ul class="menu__box">
                         <li><a href="#about_us" title="O nás">About us</a></li>
                         <li><a href="#services" title="Služby">Services</a></li>
-                        <li><a href="#work" title="Naše Práce">Our work</a></li>
+                        <li><a href="#work" title="Naše Práce">References</a></li>
                         <li class="btn" title="Kontakt"><a href="mailto:hemarsro@gmail.com" class="btn">Contact</a></li>
                         <li class="translate">
                             <figure>
@@ -79,9 +79,9 @@
             <section>
                 <article>
                     <aside class="land_content">
-                        <h2>Welcome to Hemar s.r.o</h2>
+                        <h2>Welcome to HEMAR s.r.o</h2>
                         <strong>We have been building “our family” for 10 years. As a company, <br> we love a challenge, so we’re open to yours too. </strong>
-                        <br><a href="#work" title="Naše Práce">Our Work</a>
+                        <br><a href="#work" title="Naše Práce">References</a>
                     </aside>
                 </article>
             </section>
@@ -123,7 +123,7 @@
         </section>
         <section id="work">
             <article>
-                <h2>Our work</h2>
+                <h2>References</h2>
                 <aside class="carousel-container">
                     <figure>
                         <div class="carousel">
@@ -240,7 +240,7 @@
                 <p>
                     <strong>Phone Number:</strong><br>
                     <a href="tel:+421911021777">+421 911 021 777</a> <br>
-                    <a href="tel:+421905325648">+421905325648</a>
+                    <a href="tel:+421905325648">+421 905 325 648</a>
                 </p>
             </aside>
             <aside class="map">
