--- a/index.html
+++ b/index.html
@@ -224,6 +224,45 @@
                     <button class="prev"><</button>
                     <button class="next">></button>
                 </aside>
+                <aside class="carousel-container">
+                    <figure>
+                        <div class="carousel">
+                            <div class="carousel-content">
+                                <img src="./images/Project_Germany/36d314eb-3853-4776-a1d3-92b2d5b1cb40.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/725be842-8f45-4e63-ac8e-5204759475c3.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/7333d54c-108a-4492-bc7f-e5aa055c62c1.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/7587321c-548b-4370-9498-13324590c900.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/7b2ddca0-00fe-42bd-ab44-b619f745755f.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/7bd30937-0121-49fc-b7de-8f59f6b8b5e6.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/8ac33e26-3d08-4386-bdab-44ac76f94730.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/a54dc761-3434-46d7-9f05-e173723c47cb.jpeg" alt="Project Germany" title="Project Germany">
+                                <img src="./images/Project_Germany/a9a052d9-22d5-4252-8970-8d491a09527d.jpeg" alt="Project Germany" title="Project Germany">            
+                            </div>
+                        </div>
+                        <figcaption>Project Germany</figcaption>
+                    </figure>
+                    <button class="prev"><</button>
+                    <button class="next">></button>
+                </aside>
+                <aside class="carousel-container">
+                    <figure>
+                        <div class="carousel">
+                            <div class="carousel-content">
+                                <img src="./images/Project_Belgium/IMG_5989.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_5990.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_5992.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_5995.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_5996.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_5998.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_6001.jpg" alt="Project Belgium" title="Project Belgium">
+                                <img src="./images/Project_Belgium/IMG_6011.jpg" alt="Project Belgium" title="Project Belgium">        
+                            </div>
+                        </div>
+                        <figcaption>Project Belgium</figcaption>
+                    </figure>
+                    <button class="prev"><</button>
+                    <button class="next">></button>
+                </aside>
             </article>    
         </section>
     </main>
